<resources>
    <string name="app_name">MM Wallpaper</string>
    <string name="tab_text_1">explore</string>
    <string name="tab_text_2">category</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Category fragment</string>
    <string name="title_activity_home">MM Wallpaper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Moment Makers</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_about">About</string>
    <string name="menu_TandC">Terms &amp; Conditions</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_share">Share</string>
    <string name="menu_insta">Find us on Instagram</string>
    <string name="social_media">Social Media</string>
    <string name="no_favourites">No Favourites</string>

    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
